add checkpoint endpoint
